an attempt was made

--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
-    <title>Flipcard Exercise</title>
+    <title>Mini-Project</title>
 </head>
 <body>
+    <header>
+        <img class="logo" src="https://i.postimg.cc/GtsQ29Gj/800px-Pokebola-pokeball-png-0.png" alt="logo">
+        <h1>The Greatest Franchise Of All Time</h1>
+        <h1>Pokemon!</h1>
 
+        <nav class="nav">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#main">Main</a></li>
+            <li><a href="#evolution">Evolution</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </nav>
+    </header>
+
+    <main>
+        <p>Pokemon was created in 1996 by Satoshi Tajiri and is a company of Game Freak and Nintendo.The Pokemon series is estimated to be the highest-grossing media franchise of all time, and the third best video game franchise of all time with an estimated 440 millions copies sold worldwide. </p>
     <div class="container">
         <div class="oak">
             <h2>It could be dangerous out there!</h2>
@@ -19,9 +33,36 @@
             <img class="picture2" src="https://i.postimg.cc/nzykcXtG/Starters.webp" alt="picture2">
         </div>
     </div>
+
+    <div class="evolution">
+        <h1>Pokemon Evolution</h1>
+        <p>Below shows a simple evolution of a pokemon </p>
+        <img id="pic1" src="https://i.postimg.cc/PrhW014d/pic1.png" alt="pic1">
+        <img id="pic2" src="https://i.postimg.cc/fLmdrbS3/pic2.jpg" alt="pic2">
+        <img id="pic3" src="https://i.postimg.cc/dtHhnCNH/pic3.png" alt="pic3">
+    </div>
+
+    </main>
+    <footer id="#contact">
+        <h1><strong>Feel free to contact me</strong></h1>
+    </footer>
 </body>
 </html>
+
+
+
     
+
+
+
+
+
+
+
+
+
+
+
     
 
 
